syntax = "proto3";

option java_package = "net.xzos.upgradeall.core.route";
option java_multiple_files = true;
option java_outer_classname = "RouteProto";

package server_route;

service UpdateServerRoute {
  rpc GetCloudConfig(Empty) returns (Str) {}
  rpc InitHubAccount(AccountRequest) returns (AccountResponse) {}
  rpc GetAppStatus(ReleaseRequest) returns (ReleaseResponse) {}
  rpc GetDownloadInfo(GetDownloadRequest) returns (GetDownloadResponse) {}
  rpc DownloadFile(stream DownloadRequest) returns (DownloadResponse) {}
}

message Empty {}
message Str {string s = 1;}

message AppId {
  repeated Dict app_id = 2;
}

message AccountRequest{
  string hub_uuid = 1;
  repeated Dict account = 2;
}

message AccountResponse{
  repeated Dict auth = 1;
}

message ReleaseRequest{
  string hub_uuid = 1;
  repeated Dict auth = 2;
  repeated AppId app_id_list = 3;
}

message ReleaseResponse{
  bool valid_hub_uuid = 1;
  repeated ReleasePackage release_package_list = 2;
}

message ReleasePackage{
  AppId app_id = 1;
  repeated ReleaseListItem release_list = 2;
}

message GetDownloadRequest {
  string hub_uuid = 1;
  repeated Dict auth = 2;
  AppId app_id = 3;
  repeated int32 asset_index = 4;
}

message GetDownloadResponse {
  repeated DownloadPackage list = 1;
}

message DownloadPackage {
  string url = 1;
  repeated Dict request_header = 2;
}


message ReleaseListItem {
  string version_number = 1;
  string change_log = 2;
  repeated AssetItem assets = 3;
}

message AssetItem {
  string file_name = 1;
  string download_url = 2;
  string file_type = 3;
}

message Dict {
  string key = 1;
  string value = 2;
}

message DownloadRequest {
  oneof download_oneof {
    string url = 1;
    DownloadStatus status = 2;
  }
}

message DownloadResponse {
  oneof download_oneof {
    DownloadMetadata meta_data = 1;
    Chunk chunk = 2;
  }
}

message DownloadStatus {
  string message = 1;
  UploadStatusCode code = 2;
}

enum UploadStatusCode {
  Unknown = 0;
  Ok = 1;
  Failed = 2;
}



message DownloadMetadata {
  oneof download_oneof {
    string file_name = 1;
    bool end = 2;
  }
}

message Chunk {
  bytes content = 1;
}
